--- a/packages/@hec.js/cli/package.json
+++ b/packages/@hec.js/cli/package.json
@@ -4,17 +4,18 @@
   "version": "0.0.1",
   "description": "CLI tool for the hec webdev environment",
   "bin": {
-    "hec": "./bin/hec.js",
-    "hec-favicon": "./bin/hec-favicon.js",
-    "hec-icons": "./bin/hec-icons.js",
-    "hec-font": "./bin/hec-font.js"
+    "hec": "bin/hec.js",
+    "hec-favicon": "bin/hec-favicon.js",
+    "hec-icons": "bin/hec-icons.js",
+    "hec-font": "bin/hec-font.js"
   },
+  "license": "MIT",
   "main": "./lib/index.js",
   "dependencies": {
     "args": "^5.0.3",
-    "sharp": "^0.32.4",
-    "svg-to-ico": "^1.0.13",
-    "svgtofont": "^3.25.4",
+    "sharp": "^0.33.1",
+    "svg-to-ico": "^1.0.14",
+    "svgtofont": "^4.1.1",
     "@hec.js/cli": "file:./"
   }
 }
