--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "hec",
   "workspaces": [
-    "packages/@hec.js/cli"
+    "packages/@hec.js/cli",
+    "packages/@hec.js/api",
+    "packages/@hec.js/env",
+    "packages/@hec.js/ui"
   ]
 }
