--- a/packages/@hec.js/api/package.json
+++ b/packages/@hec.js/api/package.json
@@ -7,7 +7,7 @@
   "main": "./lib/index.js",
   "types": "./lib/types/index.d.ts",
   "scripts": {
-    "types": "npx -p typescript tsc './lib/index.js' --declaration --allowJs --emitDeclarationOnly --outDir types"
+    "types": "npx -p typescript tsc './lib/index.js' --declaration --allowJs --emitDeclarationOnly --outDir ./lib/types"
   },
   "dependencies": {
     "@hec.js/api": "file:./",
