--- a/packages/@hec.js/database/package.json
+++ b/packages/@hec.js/database/package.json
@@ -5,6 +5,10 @@
   "description": "DB lib for the hec.dev environment",
   "license": "MIT",
   "main": "./lib/index.js",
+  "types": "./lib/types/index.d.ts",
+  "scripts": {
+    "build:types": "npx -p typescript tsc './lib/index.js' --declaration --allowJs --emitDeclarationOnly --outDir types && rm -rf ./lib/types && mv types ./lib/types"
+  },
   "dependencies": {
     "@hec.js/database": "file:./",
     "pg-query-stream": "^4.5.3"
