--- a/packages/@hec.js/api/package.json
+++ b/packages/@hec.js/api/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@hec.js/api": "file:./",
-    "urlpattern-polyfill": "^9.0.0",
-    "mime-types": "^2.1.35"
+    "md5-file": "^5.0.0",
+    "mime-types": "^2.1.35",
+    "urlpattern-polyfill": "^9.0.0"
   }
 }
