--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
     "packages/@hec.js/env",
     "packages/@hec.js/ui",
     "packages/@hec.js/database",
-    "packages/@hec.js/event"
+    "packages/@hec.js/broker"
   ]
 }
